test-suite/parser/pass/match_guards.first
function f(n: Int) -> Int {
  return match n {
    n when n < 0 => -1,
    n when n > 0 => 1,
    otherwise => 0
  };
}
