test-suite/parser/fail/malformed_match.first
function f(n: Int) -> Int {
  return match n
    x => 0
  };
}
